kubernetes/apps/default/qbittorrent/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - qbt-test.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
